--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,10 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: 
-      - 'main'
-      - 'develop'
-      - 'staging'
+    branches: [ main ]
   workflow_dispatch:
 
 permissions:
@@ -13,75 +10,49 @@ permissions:
   pages: write
   id-token: write
 
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Detect package manager
-        id: detect-package-manager
-        run: |
-          if [ -f "${{ github.workspace }}/yarn.lock" ]; then
-            echo "manager=yarn" >> $GITHUB_OUTPUT
-            echo "command=install" >> $GITHUB_OUTPUT
-            echo "runner=yarn" >> $GITHUB_OUTPUT
-            exit 0
-          elif [ -f "${{ github.workspace }}/package.json" ]; then
-            echo "manager=npm" >> $GITHUB_OUTPUT
-            echo "command=ci" >> $GITHUB_OUTPUT
-            echo "runner=npx --no-install" >> $GITHUB_OUTPUT
-            exit 0
-          else
-            echo "Unable to determine package manager"
-            exit 1
-          fi
-
-      - name: Set up Node.js
+      - name: Set up Node
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
-          cache: ${{ steps.detect-package-manager.outputs.manager }}
+          node-version: 18
+          cache: 'npm'
 
       - name: Install dependencies
-        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
-
-      - name: Build project
-        run: |
-          if [ "${{ github.ref }}" = "refs/heads/main" ]; then
-            export VITE_APP_ENV=production
-          elif [ "${{ github.ref }}" = "refs/heads/staging" ]; then
-            export VITE_APP_ENV=staging
-          else
-            export VITE_APP_ENV=development
-          fi
-          ${{ steps.detect-package-manager.outputs.manager }} run build
+        run: npm ci
+        
+      - name: List files before build
+        run: ls -la
+        
+      - name: Build
+        run: npm run build
         env:
           REACT_APP_EMAILJS_SERVICE_ID: ${{ secrets.EMAILJS_SERVICE_ID }}
           REACT_APP_EMAILJS_TEMPLATE_ID: ${{ secrets.EMAILJS_TEMPLATE_ID }}
           REACT_APP_EMAILJS_PUBLIC_KEY: ${{ secrets.EMAILJS_PUBLIC_KEY }}
-
+          
+      - name: List dist directory
+        run: ls -la dist
+        
       - name: Setup Pages
         uses: actions/configure-pages@v3
-
+        
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: ./dist
+          path: dist
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
     environment:
-      name: ${{ github.ref_name }}
+      name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
